--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -765,11 +765,43 @@ i.fa.fa-bars{
 	}
 	.footer-content{
 		width: 100%;
-		height: 100px;
+		color: white;
 		background-color: #004824;
+		font-size: 15px;
+		padding-bottom:10px; 
 	}
 	.footer .top-footer{
 		width: 100%;
+	}
+	.footer .row{
+		background-color: transparent !important;
+	}
+	#f-content1{
+		float: left;
+		padding-left: 7%;
+		margin-bottom: 20px;
+	}
+	#f-content1 img:nth-child(1){
+		width: 150px;
+		margin-left: 20px;
+	}
+	#f-content1 img:nth-child(2){
+		width: 200px;
+		margin: 0 auto;
+	}
+	#f-content2{
+		float: left;
+	}
+	.footer-nav li{
+		display: inline-block;
+		padding-right: 15px;
+	}
+	.footer-nav li:hover a{
+		color: red;
+	}
+	.footer-nav li a{
+		color: white ;
+		font-size: 	18px !important;
 	}
 /*********** CSS menu-mobile screen-600 ************/
 @media only screen and (min-width: 600px){
@@ -1225,7 +1257,7 @@ i.fa.fa-bars{
 	}
 	.new-item .news-detail{
 		color: #039be5;
-		width: 73%;
+		width: 72%;
 		margin-left: 5px;
 		float: right;
 	}
