--- a/Du_anTN/CSS/search-nearby.css
+++ b/Du_anTN/CSS/search-nearby.css
@@ -77,6 +77,9 @@
   width: 100%;
   height: 500px;
 }
+#mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div{
+  max-width: 400px;
+}
 #mapholder > div > div > div:nth-child(1) > div:nth-child(4) > div:nth-child(4) > div:nth-child(2) > div.gm-style-iw > div:nth-child(1) > div > div > div.content-right-locale > p:nth-child(1){
 	color: red !important;
 }
