--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -942,6 +942,7 @@ i.fa.fa-bars{
 	.banner-mobile{
 		display: none;
 	}
+
 	.wrapper-container{
 		position: relative;
 		margin-top: 480px;
@@ -1158,7 +1159,7 @@ i.fa.fa-bars{
 		cursor: pointer;
 		opacity: 0.5;}
 	/************* Menu cho desktop*********/
-	.menu-mobile{
+	.menu-mobile,.sign-mobile,.info-acc-mobile{
 		display: none;
 	}
 	.menu-dropdown{
