--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -1159,7 +1159,7 @@ i.fa.fa-bars{
 		cursor: pointer;
 		opacity: 0.5;}
 	/************* Menu cho desktop*********/
-	.menu-mobile,.sign-mobile,.info-acc-mobile{
+	.menu-mobile{
 		display: none;
 	}
 	.menu-dropdown{
