--- a/Project-React/views/home.ejs
+++ b/Project-React/views/home.ejs
@@ -5,11 +5,11 @@
         <title>DEMO ReactJs</title>
         <script src="libraries/react.js"></script>
         <script src="libraries/react-dom.js"></script>
-        <script src="libraries/babel-core-browser.min.js"></script>
+        <script src="libraries/babel.min.js"></script>
     </head>
     <body>
         <div id="root"></div>     <!--nơi lưu nội dung React render ra-->
-        <script src="reactdom.js" type="text/babel">
+        <script src="vd2.js" type="text/babel">
 
         </script>
     </body>
