--- a/Du_anTN/CSS/home.css
+++ b/Du_anTN/CSS/home.css
@@ -55,10 +55,14 @@ ol, ul{
 .back-top img{
 	width: 50px;
 	position: fixed;
-	bottom: 1%;
+	bottom: 56%;
 	right: 0;
 	z-index: 123;
 	cursor: pointer;
+	display: none;
+}
+.back-top-visibility{
+	display: block !important;
 }
 .content{font-size: 0.9em}
 .banner{
