--- a/valenta-service/src/sass/overrides.sass
+++ b/valenta-service/src/sass/overrides.sass
@@ -55,3 +55,9 @@ section.container
   display: none !important
 .v-card
   box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%) !important
+.counter-up-down input[type=number]::-webkit-inner-spin-button,
+.counter-up-down input[type=number]::-webkit-outer-spin-button 
+  -webkit-appearance: none
+  margin: 0
+.counter-up-down input[type=number]
+  text-align: center
