--- a/valenta-service/src/sass/overrides.sass
+++ b/valenta-service/src/sass/overrides.sass
@@ -63,3 +63,5 @@ section.container
   text-align: center
 .v-select-list .v-list-item
   border-bottom: 1px dotted #b9b9b9
+main.v-content
+  padding-top: 0px !important
