update code vacc

--- a/vacc-service/src/sass/overrides.sass
+++ b/vacc-service/src/sass/overrides.sass
@@ -39,7 +39,7 @@ table
   font-size: 1rem
 .v-data-table-header th 
   font-size: 16px !important
-  color: #4caf50 !important
+  color: #0054a6 !important
   font-weight: 400 !important
 section.container
   max-width: 1366px !important
