--- a/vacc-service/src/sass/overrides.sass
+++ b/vacc-service/src/sass/overrides.sass
@@ -86,7 +86,9 @@ main.v-content
 
 .theme--dark.v-pagination .v-pagination__navigation
   background: #1e1e1e
-
+.theme--light.v-picker--date
+  margin-top: 0px
+  margin-bottom: 0px
 .v-pagination 
   -webkit-box-align: center
   -ms-flex-align: center
