--- a/csdlhc-bogiaothong/src/sass/overrides.sass
+++ b/csdlhc-bogiaothong/src/sass/overrides.sass
@@ -195,7 +195,9 @@ table th, table td
   margin-bottom: 0px !important
 form label
   font-weight: 500 !important
-
+form .v-icon
+  font-size: 20px !important
+  
 @media (min-width: 1368px)
   .container
     max-width: 1300px !important
