--- a/csdlhc-bogiaothong/src/sass/overrides.sass
+++ b/csdlhc-bogiaothong/src/sass/overrides.sass
@@ -197,7 +197,8 @@ form label
   font-weight: 500 !important
 form .v-icon
   font-size: 20px !important
-  
+.v-dialog .v-toolbar,.v-dialog .v-toolbar__content
+  height: 48px !important
 @media (min-width: 1368px)
   .container
     max-width: 1300px !important
